# webserver

./: .gitignore  CMakeLists.txt  Makefile  README.md
conf/: mywebserv.conf
src/cgi/: CgiModule.cpp
src/core/: Server.hpp  main.cpp
src/core/client/: Client.cpp
src/core/server/: Server.cpp  ServerInit.cpp
src/errors/: ErrorPager.cpp  ErrorPager.hpp
src/methods/: ABuildPolicy.cpp  ABuildPolicy.hpp
src/methods/post/: PostBuildPolicy.cpp
src/methods/put/: PutBuildPolicy.cpp
src/request/: BodyReader.cpp  Request.cpp  Request.hpp  RequestReceiver.hpp
src/request/receive/: RequestReceiver.cpp  RequestReceiver.hpp
src/response/: ABuildPolicy.hpp  Response.cpp  Response.hpp  ResponseSender.hpp
src/response/send/: ResponseSender.hpp
src/utils/: FileManager.cpp  fdToString.cpp
unit_tests/: cgi_module_tester.cpp  testerReqReceiver.cpp
